--- a/challenges/debugLoadFiles/promise/package.json
+++ b/challenges/debugLoadFiles/promise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "debug-async",
+  "name": "dblaie-os",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,12 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "abbott": "^1.1.3",
-    "dion": "^1.0.2",
-    "generic-errors": "^2.0.2",
-    "righto": "^3.0.1",
-    "sea-lion": "^2.0.0",
-    "tape": "^4.7.0",
-    "zip-dir": "^1.0.2"
+    "tape": "^4.7.0"
   }
 }
