--- a/challenges/debugLoadFiles/righto/package.json
+++ b/challenges/debugLoadFiles/righto/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "debug-async",
+  "name": "debug-load-files-righto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,12 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "abbott": "^1.1.3",
-    "dion": "^1.0.2",
-    "generic-errors": "^2.0.2",
-    "righto": "^3.0.1",
-    "sea-lion": "^2.0.0",
-    "tape": "^4.7.0",
-    "zip-dir": "^1.0.2"
+    "righto": "^3.0.4",
+    "tape": "^4.7.0"
   }
 }
