--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "abbott": "^1.1.3",
     "dion": "^1.0.2",
     "generic-errors": "^2.0.2",
+    "request-data": "^1.2.0",
     "righto": "^3.0.1",
     "sea-lion": "^2.0.0",
     "tape": "^4.7.0",
