--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.0.1",
     "make-json-request": "^1.0.0",
     "prompt-sync": "^4.1.5",
     "request": "^2.81.0",
