--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify ui/scripts/index.js > public/index.js",
+    "postinstall": "cd ./client; npm i; cd -",
     "watch": "watchify -d ui/scripts/index.js -o public/index.js"
   },
   "author": "",
