--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zip-dir": "^1.0.2"
   },
   "devDependencies": {
+    "browserify": "^16.5.0",
     "npm-run-all": "^4.1.5",
     "watchify": "^3.11.1"
   }
